--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2309,6 +2309,7 @@ Multimedia API</a>. </big>
       6.7.4 – Background subsystem improved.<br>
       6.7.5 – Text drawing subsystem improved.<br>
       6.7.6 – Sprite subsystem improved.<br>
+      6.7.7 – Render performance increased.<br>
     </big>
     <p></p>
   </body>
