Image loader improved

--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2297,8 +2297,7 @@ Multimedia API</a>. </big>
       6.5.9 – Small bug in game–pad subsystem fixed.<br>
       6.6 – Source code synced with Gray game development kit 2.2.7.<br>
       6.6.1 – Text drawing subsystem improved.<br>
-      6.6.2 – Simple sound subsystem back-ported from Neon game development kit
-      5.7.8.<br>
+      6.6.2 – Simple sound subsystem back-ported from Neon game development kit 5.7.8.<br>
       6.6.3 – Small bug in multimedia subsystem fixed.<br>
       6.6.4 – 6.6.6 – Small changes.<br>
       6.6.7 – Multimedia subsystem improved.<br>
@@ -2310,7 +2309,7 @@ Multimedia API</a>. </big>
       6.7.5 – Text drawing subsystem improved.<br>
       6.7.6 – Sprite subsystem improved.<br>
       6.7.7 – Render performance increased.<br>
-      6.7.8 – Image loader improved.<br>
+      6.7.8 – 6.7.9 – Image loader improved.<br>
     </big>
     <p></p>
   </body>
