--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2310,6 +2310,7 @@ Multimedia API</a>. </big>
       6.7.6 – Sprite subsystem improved.<br>
       6.7.7 – Render performance increased.<br>
       6.7.8 – 6.7.9 – Image loader improved.<br>
+      6.8 – Small changes.<br>
     </big>
     <p></p>
   </body>
