--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2270,8 +2270,7 @@ Multimedia API</a>. </big>
       6.2.9 – Small changes.<br>
       6.3 – Base sprite subsystem improved.<br>
       6.3.1 – 6.3.2 – Small changes.<br>
-      6.3.3 – Base graphics subsystem back-ported from Neon game development kit
-      5.8.4.<br>
+      6.3.3 – Base graphics subsystem back-ported from Neon game development kit 5.8.4.<br>
       6.3.4 – Visual C++ 2005 support added.<br>
       6.3.5 – Small changes.<br>
       6.3.6 – Ordinary sprite subsystem improved.<br>
@@ -2311,6 +2310,8 @@ Multimedia API</a>. </big>
       6.7.7 – Render performance increased.<br>
       6.7.8 – 6.7.9 – Image loader improved.<br>
       6.8 – Small changes.<br>
+      6.8.1 – Ordinary sprite subsystem improved.<br>
+      6.8.2 – Small changes.<br>
     </big>
     <p></p>
   </body>
