Multimedia subsystem replaced by Audio subsystem

--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -61,7 +61,7 @@
         <ul>
           <li><a href="#mozTocId648026">Chapter 1. The sub–namespace</a></li>
           <li><a href="#mozTocId909723">Chapter 2. Memory</a></li>
-          <li><a href="#mozTocId950985">Chapter 3. Multimedia</a></li>
+          <li><a href="#mozTocId950985">Chapter 3. Audio</a></li>
         </ul>
       </li>
       <li><a href="#mozTocId209024">Part 6. Misc</a>
@@ -96,7 +96,7 @@
           <li><a href="#mozTocId293644">Chapter 3. Base graphics subsystem</a></li>
           <li><a href="#mozTocId472209">Chapter 4. Game–pad</a></li>
           <li><a href="#mozTocId804583">Chapter 5. Input</a></li>
-          <li><a href="#mozTocId692266">Chapter 6. Multimedia</a></li>
+          <li><a href="#mozTocId692266">Chapter 6. Audio</a></li>
         </ul>
       </li>
       <li><a href="#mozTocId78453">Version history</a></li>
@@ -314,6 +314,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       optimization.<br>
       <br>
       <span style="text-decoration: underline;"> Note for Visual C++ users</span><br
+
         style="text-decoration: underline;">
       <br>
       Disable pre–compiled headers before start compilation. Old Visual C++
@@ -382,7 +383,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         subsystem</span><br>
       <br>
       Base graphics subsystem do rendering game scene. This subsystem using <a
-
         href="http://opengl.org">OPENGL</a> for render. Most modern video–card
       support hardware accelerated OPENGL. Software emulated OPENGL will
       activate if </big><big>hardware acceleration not available.</big><br>
@@ -1161,11 +1161,11 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="font-style: italic;"> unsigned long int Memory::get_usage();</span>
       – Return percentage of physical memory usage.</big><big><span style="text-decoration: underline;"></span><br>
     </big>
-    <h2><a name="mozTocId950985" class="mozTocH2"></a><big>Chapter 3. Multimedia</big></h2>
+    <h2><a name="mozTocId950985" class="mozTocH2"></a><big>Chapter 3. Audio</big></h2>
     <big><span style="text-decoration: underline;">A few words about multimedia
         subsystem</span><br>
       <br>
-      Multimedia subsystem intend for playing music and sounds. <a href="https://en.wikipedia.org/wiki/WAV">Waveform
+      Audio subsystem intend for playing music and sounds. <a href="https://en.wikipedia.org/wiki/WAV">Waveform
         Audio File Format</a>, <a href="https://en.wikipedia.org/wiki/MP3">MPEG
         Audio Layer 3</a> and <a href="https://en.wikipedia.org/wiki/Windows_Media_Audio">Windows
         Media Audio</a> are supported.<br>
@@ -1174,31 +1174,31 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <br>
       You can use an additional format if you install third–party codecs.<br>
       <br>
-      <span style="text-decoration: underline;"> Working with multimedia</span><br>
+      <span style="text-decoration: underline;"> Working with audio</span><br>
       <br>
-      Just use <span style="font-style: italic;">Multimedia</span> class to
-      work with multimedia. Let's look at public methods.<br>
+      Just use <span style="font-style: italic;">Audio</span> class to work
+      with audio. Let's look at public methods.<br>
       <br>
-      <span style="font-style: italic;"> void Multimedia::initialize();</span> –
+      <span style="font-style: italic;"> void Audio::initialize();</span> –
       Initialize the subsystem.<br>
       <br>
-      <span style="font-style: italic;"> void Multimedia::initialize(const char
-        *target);</span> – Initialize the subsystem and load a multimedia file.<br>
+      <span style="font-style: italic;"> void Audio::initialize(const char
+        *target);</span> – Initialize the subsystem and load a sound file.<br>
       <br>
-      <span style="font-style: italic;"> void Multimedia::load(const char
-        *target);</span> – Load a multimedia file.<br>
+      <span style="font-style: italic;"> void Audio::load(const char *target);</span>
+      – Load a sound file.<br>
       <br>
-      <span style="font-style: italic;"> void Multimedia::play();</span> – Play
-      a content of the target file.<br>
+      <span style="font-style: italic;"> void Audio::play();</span> – Play a
+      content of the target file.<br>
       <br>
-      <span style="font-style: italic;"> void Multimedia::play_loop();</span> –
+      <span style="font-style: italic;"> void Audio::play_loop();</span> –
       Checking play status and restart play if needed.<br>
       <br>
-      <span style="font-style: italic;"> void Multimedia::stop();</span> – Stop
+      <span style="font-style: italic;"> void Audio::stop();</span> – Stop
       playing a content of the target file.<br>
       <br>
-      <span style="font-style: italic;"> bool Multimedia::check_playing();</span>
-      – Return true if the multimedia resource is playing.</big><br>
+      <span style="font-style: italic;"> bool Audio::check_playing();</span> –
+      Return true if the sound resource is playing.</big><br>
     <big> </big>
     <h1><a name="mozTocId209024" class="mozTocH1"></a><big>Part 6. Misc</big></h1>
     <h2><a name="mozTocId608755" class="mozTocH2"></a><big>Chapter 1. File
@@ -1225,12 +1225,10 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Exit from your program and return user to operating system.<br>
       <br>
       <span style="font-style: italic;">bool enable_logging(const char *name); </span></big><big>–</big><big><span
-
         style="font-style: italic;"></span> Enable redirecting error messages to
       a log file and return false if the operation failed.<br>
       <br>
       <span style="font-style: italic;">void randomize(); </span></big><big>–</big><big><span
-
         style="font-style: italic;"></span> Initialize random number generator.<br>
       <br>
       <span style="font-style: italic;">unsigned int get_random(const int
@@ -1982,8 +1980,8 @@ Multimedia API</a>. </big>
       </tbody>
     </table>
     <big> </big> <br>
-    <h2><a name="mozTocId692266" class="mozTocH2"></a><big>Chapter 6. Multimedia</big></h2>
-    <big> Multimedia subsystem working over <a href="https://docs.microsoft.com/en-us/windows/desktop/DirectShow/directshow">DirectShow</a>.
+    <h2><a name="mozTocId692266" class="mozTocH2"></a><big>Chapter 6. Audio</big></h2>
+    <big> Audio subsystem working over <a href="https://docs.microsoft.com/en-us/windows/desktop/DirectShow/directshow">DirectShow</a>.
       It is available as part of <a href="https://en.wikipedia.org/wiki/DirectX">DirectX</a>.
       DirectX is pre–installed by default under modern versions of Windows.</big><big><br>
     </big>
@@ -2312,6 +2310,8 @@ Multimedia API</a>. </big>
       6.8 – Small changes.<br>
       6.8.1 – Ordinary sprite subsystem improved.<br>
       6.8.2 – Small changes.<br>
+      6.8.3 – Multimedia subsystem replaced by Audio subsystem.<br>
+      6.8.4 – Image loader improved.<br>
     </big>
     <p></p>
   </body>
