Render performance increased

--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2312,6 +2312,7 @@ Multimedia API</a>. </big>
       6.8.2 – Small changes.<br>
       6.8.3 – Multimedia subsystem replaced by Audio subsystem.<br>
       6.8.4 – Image loader improved.<br>
+      6.8.5 – Render performance increased.<br>
     </big>
     <p></p>
   </body>
