Audio subsystem improved

--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -253,7 +253,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
     <ul>
       <li><a href="https://jmeubank.github.io/tdm-gcc/"><big>TDM–GCC</big></a></li>
       <li><a href="http://mingw-w64.org"><big>MINGW–w64</big></a></li>
-      <li><a href="http://openwatcom.org"><big>Open Watcom 1.9</big></a></li>
+      <li><a href="http://openwatcom.org"><big>Open Watcom</big></a></li>
       <li><big><a href="https://open-watcom.github.io">Open Watcom V2 Fork</a><br>
         </big></li>
       <li><big>Visual C++ 2005</big></li>
@@ -286,7 +286,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         specific notes</big></h2>
     <big><span style="text-decoration: underline;"> Old processor support</span><br>
       <br>
-      Open Watcom 1.9 or Open Watcom V2 Fork need for old processors support.<br>
+      Open Watcom or Open Watcom V2 Fork need for old processors support.<br>
       <br style="text-decoration: underline;">
       <span style="text-decoration: underline;"> Windows XP support</span><br>
       <br>
@@ -294,7 +294,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
     </big>
     <ul>
       <li><big>TDM–GCC</big></li>
-      <li><big>Open Watcom 1.9</big></li>
+      <li><big>Open Watcom</big></li>
       <li><big>Open Watcom V2 Fork</big></li>
       <li><big>Visual C++ 2005</big></li>
       <li><big>Visual C++ 2008<br>
@@ -2313,6 +2313,7 @@ Multimedia API</a>. </big>
       6.8.3 – Multimedia subsystem replaced by Audio subsystem.<br>
       6.8.4 – Image loader improved.<br>
       6.8.5 – Render performance increased.<br>
+      6.8.6 – Audio subsystem improved.<br>
     </big>
     <p></p>
   </body>
