--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2314,6 +2314,7 @@ Multimedia API</a>. </big>
       6.8.4 – Image loader improved.<br>
       6.8.5 – Render performance increased.<br>
       6.8.6 – Audio subsystem improved.<br>
+      6.8.7 – Small changes.<br>
     </big>
     <p></p>
   </body>
