--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -1844,25 +1844,25 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       sticks.<br>
       <br>
       <span style="font-style: italic;"> EUGENEGDK::GAMEPAD_DIRECTION
-        Gamepad::get_stick_x(const EUGENEGDK::GAMEPAD_STICKS stick);</span> –
+        Gamepad::get_stick_x(const EUGENEGDK::GAMEPAD_STICKS stick) const;</span> –
       Return x–direction of specific stick.<br>
       <br>
       <span style="font-style: italic;"> EUGENEGDK::GAMEPAD_DIRECTION
-        Gamepad::get_stick_y(const EUGENEGDK::GAMEPAD_STICKS stick);</span> –
+        Gamepad::get_stick_y(const EUGENEGDK::GAMEPAD_STICKS stick) const;</span> –
       Return y–direction of specific stick.<br>
       <br>
       <span style="font-style: italic;"> EUGENEGDK::GAMEPAD_DIRECTION
-        Gamepad::get_left_stick_x();</span> – Return x–direction of left stick.<br>
+        Gamepad::get_left_stick_x() const;</span> – Return x–direction of left stick.<br>
       <br>
       <span style="font-style: italic;"> EUGENEGDK::GAMEPAD_DIRECTION
-        Gamepad::get_left_stick_y();</span> – Return y–direction of left stick.<br>
+        Gamepad::get_left_stick_y() const;</span> – Return y–direction of left stick.<br>
       <br>
       <span style="font-style: italic;"> EUGENEGDK::GAMEPAD_DIRECTION
-        Gamepad::get_right_stick_x();</span> – Return x–direction of right
+        Gamepad::get_right_stick_x() const;</span> – Return x–direction of right
       stick.<br>
       <br>
       <span style="font-style: italic;"> EUGENEGDK::GAMEPAD_DIRECTION
-        Gamepad::get_right_stick_y();</span> – Return y–direction of right
+        Gamepad::get_right_stick_y() const;</span> – Return y–direction of right
       stick.<br>
     </big>
     <h1><a name="mozTocId309127" class="mozTocH1"></a><big>Part 9. Internal
@@ -2317,7 +2317,7 @@ Multimedia API</a>. </big>
       6.8.5 – Render performance increased.<br>
       6.8.6 – Audio subsystem improved.<br>
       6.8.7 – Small changes.<br>
-      6.8.8 – 6.8.9 – Game–pad subsystem improved.<br>
+      6.8.8 – 6.9.1 – Game–pad subsystem improved.<br>
     </big>
     <p></p>
   </body>
