--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2318,6 +2318,7 @@ Multimedia API</a>. </big>
       6.8.6 – Audio subsystem improved.<br>
       6.8.7 – Small changes.<br>
       6.8.8 – 6.9.1 – Game–pad subsystem improved.<br>
+      6.9.2 – Small changes.<br>
     </big>
     <p></p>
   </body>
