Source code synced with Neon game development kit 6.2.6

--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2319,6 +2319,7 @@ Multimedia API</a>. </big>
       6.8.7 – Small changes.<br>
       6.8.8 – 6.9.1 – Game–pad subsystem improved.<br>
       6.9.2 – Small changes.<br>
+      6.9.3 – Source code synced with Neon game development kit 6.2.6.<br>
     </big>
     <p></p>
   </body>
